--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div> Welcome</div>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+    <div> Welcome</div>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+
